k8s-opa/bad.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bad-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bad-app
  template:
    metadata:
      labels:
        app: bad-app   # missing environment + owner
    spec:
      containers:
      - name: nginx
        image: nginx
