k8s-opa/good.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: good-app
  labels:
    app: good-app
    environment: dev
    owner: platform-team
spec:
  replicas: 1
  selector:
    matchLabels:
      app: good-app
  template:
    metadata:
      labels:
        app: good-app
        environment: dev
        owner: platform-team
    spec:
      containers:
      - name: nginx
        image: nginx
