k8s-opa/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequiredlabels
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredLabels
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
          package k8srequiredlabels

          violation[{"msg": msg}] {
            required := {"app", "environment", "owner"}

            provided := {key | input.review.object.metadata.labels[key]}

            missing := required - provided

            count(missing) > 0

            msg := sprintf("Missing required labels: %v", [missing])
          }
